<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_label_card_number">Card number</string>
    <string name="acc_label_card_number_node">%s, Card number</string>
    <string name="acc_label_cvc_node">%s, CVC</string>
    <string name="acc_label_expiry_date">Expiration date</string>
    <string name="acc_label_expiry_date_node">%s, Expiration date</string>
    <string name="acc_label_zip">ZIP Code</string>
    <string name="acc_label_zip_short">ZIP</string>
    <string name="accessibility_close">Close</string>
    <string name="add_new_payment_method">Add a new payment method</string>
    <string name="added">Added %s</string>
    <string name="address_city_required">Please enter your city</string>
    <string name="address_country_invalid">Your country is invalid</string>
    <string name="address_county_required">Please enter your county</string>
    <string name="address_label_address">Address</string>
    <string name="address_label_address_line1">Address line 1</string>
    <string name="address_label_address_line1_optional">Address line 1 (optional)</string>
    <string name="address_label_address_line2">Address line 2</string>
    <string name="address_label_address_line2_optional">Address line 2 (optional)</string>
    <string name="address_label_address_optional">Address (optional)</string>
    <string name="address_label_ae_emirate">Emirate</string>
    <string name="address_label_apt_optional">Apt. (optional)</string>
    <string name="address_label_au_suburb_or_city">Suburb or city</string>
    <string name="address_label_bb_jm_parish">Parish</string>
    <string name="address_label_cedex">Cedex</string>
    <string name="address_label_city">City</string>
    <string name="address_label_city_optional">City (optional)</string>
    <string name="address_label_country">Country</string>
    <string name="address_label_county">County</string>
    <string name="address_label_county_optional">County (optional)</string>
    <string name="address_label_department">Department</string>
    <string name="address_label_district">District</string>
    <string name="address_label_hk_area">Area</string>
    <string name="address_label_ie_eircode">Eircode</string>
    <string name="address_label_ie_townland">Townland</string>
    <string name="address_label_in_pin">Pin</string>
    <string name="address_label_island">Island</string>
    <string name="address_label_jp_prefecture">Prefecture</string>
    <string name="address_label_kr_do_si">Do Si</string>
    <string name="address_label_name">Name</string>
    <string name="address_label_neighborhood">Neighborhood</string>
    <string name="address_label_oblast">Oblast</string>
    <string name="address_label_phone_number">Phone number</string>
    <string name="address_label_phone_number_optional">Phone number (optional)</string>
    <string name="address_label_post_town">Post or Town</string>
    <string name="address_label_postal_code">Postal code</string>
    <string name="address_label_postal_code_optional">Postal code (optional)</string>
    <string name="address_label_postcode">Postcode</string>
    <string name="address_label_postcode_optional">Postcode (optional)</string>
    <string name="address_label_province">Province</string>
    <string name="address_label_province_optional">Province (optional)</string>
    <string name="address_label_region_generic">State / Province / Region</string>
    <string name="address_label_region_generic_optional">State / Province / Region (optional)</string>
    <string name="address_label_state">State</string>
    <string name="address_label_state_optional">State (optional)</string>
    <string name="address_label_suburb">Suburb</string>
    <string name="address_label_village_township">Village or Township</string>
    <string name="address_label_zip_code">ZIP Code</string>
    <string name="address_label_zip_code_optional">ZIP code (optional)</string>
    <string name="address_label_zip_postal_code">ZIP/Postal code</string>
    <string name="address_label_zip_postal_code_optional">ZIP / Postal code (optional)</string>
    <string name="address_name_required">Please enter your name</string>
    <string name="address_phone_number_required">Please enter your phone number</string>
    <string name="address_postal_code_invalid">Your postal code is invalid.</string>
    <string name="address_postcode_invalid">Your postcode is invalid</string>
    <string name="address_province_required">Please enter your province</string>
    <string name="address_region_generic_required">Please enter your State/Province/Region</string>
    <string name="address_required">Please enter your address</string>
    <string name="address_state_required">Please enter your state</string>
    <string name="address_zip_invalid">Your ZIP code is invalid.</string>
    <string name="address_zip_postal_invalid">Your ZIP/Postal code is invalid</string>
    <string name="affirm">Affirm</string>
    <string name="affirm_buy_now_pay_later">Pay over time with &lt;img src=affirm&gt;.</string>
    <string name="afterpay_clearpay_message">Pay in 4 interest-free payments of %s with</string>
    <string name="alert_description">Alert</string>
    <string name="ampm_description">Select AM/PM</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Lanidor</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="au_becs_account_name">Name on account</string>
    <string name="au_becs_bsb_number">BSB number</string>
    <string name="au_becs_mandate">By providing your bank account details and confirming this payment, you agree to this Direct Debit Request and the &lt;a href=\"https://stripe.com/au-becs-dd-service-agreement/legal\"&gt;Direct Debit Request service agreement&lt;/a&gt;, and authorise Stripe Payments Australia Pty Ltd ACN 160 180 343 Direct Debit User ID number 507156 (“Stripe”) to debit your account through the Bulk Electronic Clearing System (BECS) on behalf of %s (the \"Merchant\") for any amounts separately communicated to you by the Merchant. You certify that you are either an account holder or an authorised signatory on the account listed above.</string>
    <string name="bank_account_ending_in">Remove bank account ending in %s</string>
    <string name="becs_mandate_acceptance">\10 By providing your bank account details and confirming this payment, you agree to this\10 Direct Debit Request and the Direct Debit Request service agreement, and authorise\10 Stripe Payments Australia Pty Ltd ACN 160 180 343 Direct Debit User ID number 507156\10 (“Stripe”) to debit your account through the Bulk Electronic Clearing System (BECS) on\10 behalf of %1$s (the \"Merchant\") for any amounts separately communicated to you\10 by the Merchant. You certify that you are either an account holder or an authorised\10 signatory on the account listed above.\10</string>
    <string name="becs_widget_account_number">Account number</string>
    <string name="becs_widget_account_number_incomplete">Your account number is incomplete.</string>
    <string name="becs_widget_account_number_invalid">The account number you entered is invalid.</string>
    <string name="becs_widget_account_number_required">Your account number is required.</string>
    <string name="becs_widget_bsb">BSB</string>
    <string name="becs_widget_bsb_incomplete">The BSB you entered is incomplete.</string>
    <string name="becs_widget_bsb_invalid">The BSB you entered is invalid.</string>
    <string name="becs_widget_email">Email Address</string>
    <string name="becs_widget_email_invalid">Your email address is invalid.</string>
    <string name="becs_widget_email_required">Your email address is required.</string>
    <string name="becs_widget_name">Name</string>
    <string name="becs_widget_name_required">Your name is required.</string>
    <string name="billing_details">Billing address</string>
    <string name="blank_and_required">This field cannot be blank.</string>
    <string name="book_with_googlepay_button_content_description">Book With Google Pay</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="button_description">Button</string>
    <string name="buy_with_googlepay_button_content_description">Buy with Google Pay</string>
    <string name="cancel">Cancel</string>
    <string name="card_ending_in">%1$s ending in %2$s</string>
    <string name="card_information">Card information</string>
    <string name="card_number_hint">1234 1234 1234 1234</string>
    <string name="catalyst_change_bundle_location">Change Bundle Location</string>
    <string name="catalyst_copy_button">Copy\10</string>
    <string name="catalyst_debug">Debug</string>
    <string name="catalyst_debug_chrome">Debug with Chrome</string>
    <string name="catalyst_debug_chrome_stop">Stop Chrome Debugging</string>
    <string name="catalyst_debug_connecting">Connecting to debugger...</string>
    <string name="catalyst_debug_error">Failed to connect to debugger!</string>
    <string name="catalyst_debug_nuclide">Debug with Nuclide</string>
    <string name="catalyst_debug_nuclide_error">Failed to communicate with the bundler to enabling debugging with Nuclide.</string>
    <string name="catalyst_debug_stop">Stop Debugging</string>
    <string name="cvc_multiline_helper">123</string>
    <string name="date_description">Select Date</string>
    <string name="day_description">Select Day</string>
    <string name="expiry_date_hint">MM/YY</string>
    <string name="hour_description">Select Hour</string>
    <string name="minutes_description">Select Minutes</string>
    <string name="month_description">Select Month</string>
    <string name="overlay">Date Picker Overlay</string>
    <string name="stripe_expiration_date_allowlist">0123456789/</string>
    <string name="stripe_postalcode_placeholder">12345</string>
    <string name="year_description">Select Year</string>
</resources>