<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.stripe.android.view.CardNumberTextInputLayout android:id="@+id/tl_card_number" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/stripe_add_card_element_vertical_margin" android:hint="@string/acc_label_card_number" style="@style/Stripe.CardMultilineWidget.TextInputLayout">
        <com.stripe.android.view.CardNumberEditText android:id="@+id/et_card_number" android:nextFocusDown="@+id/et_expiry" android:layout_width="match_parent" android:layout_height="wrap_content" android:drawablePadding="@dimen/stripe_card_icon_multiline_padding" android:imeOptions="actionNext" android:nextFocusForward="@+id/et_expiry"/>
    </com.stripe.android.view.CardNumberTextInputLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/second_row_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:baselineAligned="false">
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/tl_expiry" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/stripe_add_card_element_vertical_margin" android:hint="@string/acc_label_expiry_date" android:layout_weight="1" android:layout_marginEnd="@dimen/stripe_add_card_expiry_middle_margin" app:placeholderText="@string/expiry_date_hint" style="@style/Stripe.CardMultilineWidget.TextInputLayout">
            <com.stripe.android.view.ExpiryDateEditText android:id="@+id/et_expiry" android:nextFocusDown="@+id/et_cvc" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/stripe_cmw_edit_text_minheight" android:digits="@string/stripe_expiration_date_allowlist" android:imeOptions="actionNext" android:nextFocusForward="@+id/et_cvc"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/tl_cvc" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/stripe_add_card_element_vertical_margin" android:layout_weight="1" android:layout_marginEnd="@dimen/stripe_add_card_expiry_middle_margin" app:placeholderText="@string/cvc_multiline_helper" style="@style/Stripe.CardMultilineWidget.TextInputLayout">
            <com.stripe.android.view.CvcEditText android:id="@+id/et_cvc" android:nextFocusDown="@+id/et_postal_code" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/stripe_cmw_edit_text_minheight" android:imeOptions="actionNext" android:nextFocusForward="@+id/et_postal_code"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/tl_postal_code" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/stripe_add_card_element_vertical_margin" android:layout_weight="1" app:placeholderText="@string/stripe_postalcode_placeholder" style="@style/Stripe.CardMultilineWidget.TextInputLayout">
            <com.stripe.android.view.PostalCodeEditText android:id="@+id/et_postal_code" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/stripe_cmw_edit_text_minheight" android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</merge>
