<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <com.google.android.material.card.MaterialCardView android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/StripePaymentAddPaymentMethodMaterialCard">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.stripe.android.view.CountryTextInputLayout android:id="@+id/country_layout" android:layout_width="match_parent" android:layout_height="wrap_content" app:countryAutoCompleteStyle="@style/StripePaymentSheetCountryItem" app:countryItemLayout="@layout/stripe_country_dropdown_item" app:endIconDrawable="@drawable/stripe_ic_paymentsheet_ctil_chevron" app:endIconTint="@null" app:helperTextEnabled="false" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/StripePaymentSheetAutocompleteTextInputLayout"/>
            <View android:id="@+id/address1_divider" android:visibility="gone" app:layout_constraintBottom_toTopOf="@+id/address1_layout" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/country_layout" style="@style/StripePaymentSheetFormDivider"/>
            <com.google.android.material.textfield.TextInputLayout android:id="@+id/address1_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/address_label_address_line1" app:layout_constraintBottom_toTopOf="@+id/address2_divider" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/address1_divider" style="@style/StripePaymentSheetTextInputLayout">
                <com.google.android.material.textfield.TextInputEditText android:id="@+id/address1" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/StripePaymentSheetTextInputEditText"/>
            </com.google.android.material.textfield.TextInputLayout>
            <View android:id="@+id/address2_divider" android:visibility="gone" app:layout_constraintBottom_toTopOf="@+id/address2_layout" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/address1_layout" style="@style/StripePaymentSheetFormDivider"/>
            <com.google.android.material.textfield.TextInputLayout android:id="@+id/address2_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/address_label_address_line2_optional" app:layout_constraintBottom_toTopOf="@+id/city_postal_divider" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/address2_divider" style="@style/StripePaymentSheetTextInputLayout">
                <com.google.android.material.textfield.TextInputEditText android:id="@+id/address2" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/StripePaymentSheetTextInputEditText"/>
            </com.google.android.material.textfield.TextInputLayout>
            <View android:id="@+id/city_postal_divider" app:layout_constraintBottom_toTopOf="@+id/city_postal_container" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/address2_layout" style="@style/StripePaymentSheetFormDivider"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/city_postal_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:baselineAligned="false" app:layout_constraintBottom_toTopOf="@+id/state_divider" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/city_postal_divider">
                <com.google.android.material.textfield.TextInputLayout android:id="@+id/city_layout" android:layout_width="0dp" android:layout_height="wrap_content" android:hint="@string/address_label_city" android:layout_weight="1" style="@style/StripePaymentSheetTextInputLayout">
                    <com.google.android.material.textfield.TextInputEditText android:id="@+id/city" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/StripePaymentSheetTextInputEditText"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout android:id="@+id/postal_code_layout" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" style="@style/StripePaymentSheetTextInputLayout">
                    <com.stripe.android.view.StripeEditText android:id="@+id/postal_code" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPostalAddress" style="@style/StripePaymentSheetTextInputEditText"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <View android:id="@+id/state_divider" app:layout_constraintBottom_toTopOf="@+id/state_layout" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/city_postal_container" style="@style/StripePaymentSheetFormDivider"/>
            <com.google.android.material.textfield.TextInputLayout android:id="@+id/state_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/address_label_state" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/state_divider" style="@style/StripePaymentSheetTextInputLayout">
                <com.google.android.material.textfield.TextInputEditText android:id="@+id/state" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/StripePaymentSheetTextInputEditText"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</merge>
